Permit MaterialDesignController to make IO call

As a one-time call on startup, permit
MaterialDesignController to check for
available touch devices on Chrome OS.

BUG=596294

Review-Url: https://codereview.chromium.org/1844033002
Cr-Commit-Position: refs/heads/master@{#392186}

Former-commit-id: 3368658a432ad62dc20b090fd97832707e77a929